feat: initial boilerplate
