# openapi.yaml
@@ -3,9 +3,15 @@ info:
   title: SCIM 2.0
   description: SCIM 2.0 RAML SAMPLE doc. Tested with Okta
   version: '1.0'
+tags:
+  - name: users
+  - name: groups
+  - name: introspection
 paths:
   /scim/v2/Users:
     get:
+      tags:
+        - users
       parameters:
         - name: filter
           description: >-
@@ -42,6 +48,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/UserCollection'
     post:
+      tags:
+        - users
       parameters:
         - name: Authorization
           required: true
@@ -68,6 +76,8 @@ paths:
         schema:
           type: string
     get:
+      tags:
+        - users
       parameters:
         - name: Authorization
           required: true
@@ -84,6 +94,8 @@ paths:
         '404':
           description: Resource not found
     put:
+      tags:
+        - users
       parameters:
         - name: Authorization
           required: true
@@ -105,6 +117,8 @@ paths:
         '404':
           description: Resource not found
     patch:
+      tags:
+        - users
       parameters:
         - name: Authorization
           required: true
@@ -126,6 +140,8 @@ paths:
         '404':
           description: Resource not found
     delete:
+      tags:
+        - users
       parameters:
         - name: Authorization
           required: true
@@ -139,6 +155,8 @@ paths:
           description: Resource not found
   /scim/v2/Groups:
     get:
+      tags:
+        - groups
       parameters:
         - name: filter
           description: >-
@@ -175,6 +193,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/GroupCollection'
     post:
+      tags:
+        - groups
       parameters:
         - name: Authorization
           required: true
@@ -201,6 +221,8 @@ paths:
         schema:
           type: string
     get:
+      tags:
+        - groups
       parameters:
         - name: Authorization
           required: true
@@ -217,6 +239,8 @@ paths:
         '404':
           description: Resource not found
     put:
+      tags:
+        - groups
       parameters:
         - name: Authorization
           required: true
@@ -238,6 +262,8 @@ paths:
         '404':
           description: Resource not found
     patch:
+      tags:
+        - groups
       parameters:
         - name: Authorization
           required: true
@@ -259,6 +285,8 @@ paths:
         '404':
           description: Resource not found
     delete:
+      tags:
+        - groups
       parameters:
         - name: Authorization
           required: true
@@ -272,6 +300,8 @@ paths:
           description: Resource not found
   /scim/v2/ServiceProviderConfig:
     get:
+      tags:
+        - introspection
       parameters:
         - name: Authorization
           required: true
@@ -316,6 +346,8 @@ paths:
                     resourceType: ServiceProviderConfig
   /scim/v2/ResourceTypes:
     get:
+      tags:
+        - introspection
       parameters:
         - name: Authorization
           required: true
@@ -364,6 +396,8 @@ paths:
                         location: scim/v2/ResourceTypes/User
   /scim/v2/Schemas:
     get:
+      tags:
+        - introspection
       parameters:
         - name: Authorization
           required: true
